--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'French fiction -- Translations into Spanish'
+- GITenberg
 title: Germana
 url: http://www.gutenberg.org/ebooks/29640
